--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+          <strong>Yaaayyyyy🤩🤩🤩</strong> Bold of you to say yes,...youve just upgraded yo subscription😈😈😈
         </p>
       </div>
     </div>
